--- a/css/styles.css
+++ b/css/styles.css
@@ -10,8 +10,8 @@ body {color: #ededed; background-color: #081b29;}
 .home-content {max-width: 600px;}
 .home-content h3 {font-size: 32px; font-weight: 700; opacity: 0; animation: slideBottom 1s ease forwards; animation-delay: .7s;}
 .home-content h3 span {color:#0ef;}
-.home-content h1 {font-size: 56px; font-weight: 7000; margin: -3px 0; opacity: 0; animation: slideRight 1s ease forwards; animation-delay: 1s;}
-.home-content p {font-size: 20px; opacity: 0; animation: slideLeft 1s ease forwards;}
+.home-content h1 {font-size: 56px; font-weight: 700; margin: 8px 0; opacity: 0; animation: slideRight 1s ease forwards; animation-delay: 1s;}
+.home-content p {font-size: 20px; opacity: 0; margin-top: 8px; animation: slideLeft 1s ease forwards;}
 .home-sci a {display: inline-flex; justify-content: center; align-items: center; width: 40px; height:40px; background:transparent; border:solid 2px #0ef; border-radius: 50%; font-size: 20px; color: #0ef; text-decoration: none; margin: 30px 15px 30px 0px; transition: .5s ease; opacity: 0; animation: slideBottom 1s ease forwards; animation-delay:calc(.2s * var(--i));}
 .home-sci a:hover {background: #0ef; color: #081b29; box-shadow: 0 0 20px #0ef;}
 .btn-box {display: inline-block; padding: 12px 28px; background:#0ef; border-radius: 40px; font-size: 16px; color: #081b29; letter-spacing: 1px; text-decoration: none; font-weight: 600; opacity: 0; animation: slideTop 1s ease forwards; animation-delay: 2s; box-shadow: 0 0 5px #0ef, 0 0 25px #0ef}
@@ -108,6 +108,8 @@ body {color: #ededed; background-color: #081b29;}
 #myBtn {display:none; position:fixed; bottom:20px; right:30px; z-index:99; font-size:18px; border:none; outline:none; background-color:red; color:white; cursor:pointer; padding:15px; border-radius:4px;}
 #myBtn:hover {background-color: #555;}
 .iconToggle {display: none;}
+.reveal {position:relative; transform: translateY(150px); opacity: 0; transition: all 1s ease;}
+.reveal.active {transform: translateY(0px); opacity:1; background:none;}
 
 @keyframes animate-path1 {
     100% {stroke-dashoffset: 50;}
