--- a/css/styles.css
+++ b/css/styles.css
@@ -1,11 +1,11 @@
 html {scroll-behavior: smooth;}
 * {margin:0px; padding:0px; box-sizing: border-box; font-family: 'poppins', sans-serif;}
 body {color: #ededed; background-color: #081b29;}
-.header {position:relative; top: 0; left: 0; width: 100%; padding: 20px 10%; background:#051129; display: flex; justify-content: space-between; align-items: center; z-index: 100;}
+.header {position:sticky; top: 0; left: 0; width: 100%; padding: 20px 10%; background:#051129; display: flex; justify-content: space-between; align-items: center; z-index: 100;}
 .logo {position: relative; font-size: 25px; color: #fff; text-decoration: none; font-weight: 600; cursor: default; opacity: 0; animation: slideRight 1s ease forwards;}
 .navbar a {display:inline-block; font-size: 25px; color: #fff; text-decoration: none; font-weight: 500; margin-left: 35px; transition: .3s; opacity: 0; animation: slideTop .5s ease forwards; animation-delay: calc(.2s * var(--i));}
 .navbar a:hover {color: #0ef;}
-.home {position: relative; width: 100%; display: flex; align-items: center; padding: 70px 10% 0; justify-content: space-between; height: 100vh; background-color: #000;}
+.home {position: relative; width: 100%; display: flex; align-items: center; padding:0px 10% 0; justify-content: space-between; height: 100vh; background-color: #000;}
 .home .profile-pic img {width: 50%;}
 .home-content {max-width: 600px;}
 .home-content h3 {font-size: 32px; font-weight: 700; opacity: 0; animation: slideBottom 1s ease forwards; animation-delay: .7s;}
@@ -18,17 +18,17 @@ body {color: #ededed; background-color: #081b29;}
 .btn-box:hover {box-shadow: 0 0 5px cyan, 0 0 25px cyan, 0 0 100px cyan, 0 0 200px cyan}
 .about {display: grid; grid-template-columns: repeat(2, 1fr); align-items: center; gap: 1.5rem; padding: 32px;}
 .about-img {display: flex; justify-content: center;}
-.about-img img {padding-bottom:10%; max-width: 500px; height: auto; width: 100%; border-radius: 8px;}
+.about-img img {padding-bottom:10%; max-width:400px; height: auto; width: 100%; border-radius: 8px;}
 .about-text h2 {font-size: 60px;}
 .about-text h2 span {color:#0ef}
 .about-text h4 {font-size: 29px; font-weight: 600; color: #fff; line-height: 1.7; margin: 15px 0 30px;}
 .about-text p {color: aliceblue; font-size: 20px; line-height: 1.4; margin-bottom: 4rem;}
-.services {color: aliceblue; font-size: 20px; line-height:1.4; margin-bottom: 4rem;}
-.services .sub-title {text-align: center; font-size: 60px; padding:70px;}
+.services {color: aliceblue; font-size: 20px; line-height:1.4; margin-bottom:0; background:linear-gradient(to top, #30cfd0 0%, #330867 100%);}
+.services .sub-title {text-align: center; font-size: 60px; padding:40 0px;}
 .services .sub-title span {color: #0ef;}
 .services .container {padding: 90px;}
 .services .services-list {display: grid; grid-template-columns: repeat(auto-fit,minmax(259px,1fr)); grid-gap: 40px; margin-top:50px;}
-.services .services-list div {background-color: transparent; padding: 40px; font-size: 13px; border-right: 10px; border-radius: 20px; transition:background 0.5s; transform: 0.5s; box-shadow: 1px 1px 20px #012290f7, 1px 1px 40px #0053b8f7}
+.services .services-list div {background-color: #333; padding: 40px; font-size: 13px; border-right: 10px; border-radius: 20px; transition:background 0.5s; transform: 0.5s; box-shadow: 1px 1px 20px #012290f7, 1px 1px 40px #0053b8f7}
 .services .services-list div span {font-size: 50px; margin-bottom: 30px;}
 .services .services-list div h2 {font-size: 30px; font-weight: 500; margin-bottom: 15px;}
 .services .services-list div a {text-decoration: none; color:#000; font-size: 12px; margin-top:20px; display: inline-block;}
@@ -36,8 +36,9 @@ body {color: #ededed; background-color: #081b29;}
 .services .services-list div a.read {display: inline-block; padding: 12px; background: #0ef; border-radius: 40px; font-size: 16px; color: #081b29; letter-spacing: 1px; text-decoration: none; font-weight: 600; opacity: 0; animation: slideTop 1s ease forwards; animation-delay: 2s; box-shadow: 0 0 5px #0ef, 0 0 25px #0ef;} 
 .services .services-list div a.read:hover {box-shadow: 0 0 5px cyan, 0 0 25px cyan, 0 0 50px cyan, 0 0 100px cyan, 0 0  200px cyan;}
 .services .services-list div:hover {transform: translateY(-10px); animation:1s ease forwards;}
+.skill {padding:60px 0px 40px 0px;}
 .skill .skillContainer {display: flex; justify-content: center;}
-.skill .sub-title {text-align: center; font-size: 60px; padding:70px;}
+.skill .sub-title {text-align: center; font-size: 60px; padding:30px 0px 20px 0px;}
 .skill .sub-title span {color: #0ef;}
 .skill .container {width: 600px; height: 500px; padding: 75px 90px; margin-left: 120px;}
 .skill .container .heading {text-align: center; text-decoration: underline; text-underline-offset: 10px; text-decoration-thickness: 5px; margin-bottom: 50px;}
@@ -74,8 +75,8 @@ body {color: #ededed; background-color: #081b29;}
 .path-2 {animation: animate-path2 1s 1s linear forwards;}
 .path-3 {animation: animate-path3 1s 1s linear forwards;}
 .path-4 {animation: animate-path4 1s 1s linear forwards;}
-.main-text {padding-top: 130px; margin-top: 200px;}
-.main-text h2 {font-size: 60px; line-height: 1; text-align: center;}
+.portfolio {position:relative; top:150px; padding-top:100px;}
+.main-text h2 {font-size: 60px; line-height: 1; text-align: center; margin-bottom: 32px;}
 .main-text h2 span {color: #0ef;}
 .portfolio-content {display: grid; grid-template-columns: repeat(auto-fit, minmax(359px, auto));}
 .row {position:relative; overflow: hidden; border-radius: 8px; cursor: pointer;}
@@ -86,7 +87,7 @@ body {color: #ededed; background-color: #081b29;}
 .layer i {color: #ff004f; margin-top: 20px;  font-size: 20px; background: #fff; width: 60px; height: 60px; display: flex; align-items: center; justify-content: center; border-radius: 50%;}
 .row:hover img {transform:scale(1.1);}
 .row:hover .layer {height: 100%;}
-.contact {display: grid; grid-template-columns: repeat(2, 1fr); align-items: center; gap: 3rem; padding-left: 30px; margin-top: 130px;}
+.contact {display: grid; grid-template-columns: repeat(2, 1fr); align-items: center; gap: 3rem; padding-left: 30px; margin-top:230px;}
 .contact-text h2 {font-size: 90px; line-height: 1; text-align: center;}
 .contact-text h2 span {color: #0ef;}
 .contact-text h4 {margin: 15px 0; color:rgb(228,228,228); font-size: 20px; font-weight: 600;}
@@ -105,7 +106,7 @@ body {color: #ededed; background-color: #081b29;}
 .last-text p {width: 100%; text-align: center; padding: 25px 0px; background: rgb(7, 85, 91); font-weight: 300; margin-top: 70px;}
 .top {position: fixed; bottom: 2.1rem; right: 2.1rem;}
 .top i {color: #000; background: #0ef; font-size: 20px; padding: 10px; border-radius: 0.5rem;}
-#myBtn {display:none; position:fixed; bottom:20px; right:30px; z-index:99; font-size:18px; border:none; outline:none; background-color:red; color:white; cursor:pointer; padding:15px; border-radius:4px;}
+#myBtn {display:none; position:fixed; bottom:20px; right:30px; z-index:99; font-size:24px; font-weight: 600; border:none; outline:none; background-color:red; color:white; cursor:pointer; padding:8px 12px; border-radius:4px;}
 #myBtn:hover {background-color: #555;}
 .iconToggle {display: none;}
 .reveal {position:relative; transform: translateY(150px); opacity: 0; transition: all 1s ease;}
@@ -155,7 +156,7 @@ body {color: #ededed; background-color: #081b29;}
 }
 
 @media(max-width:780px) {
-    .home {flex-direction: column; height: auto; padding-bottom: 40px;}
+    .home {flex-direction: column; height: auto; padding-top: 40px; padding-bottom: 40px;}
     .home .profile-pic {display:flex; justify-content:center;}
     .home .home-content {text-align: center;}
     .about {grid-template-columns: repeat(1, 1fr);}
@@ -164,7 +165,7 @@ body {color: #ededed; background-color: #081b29;}
     .skill .sub-title {font-size: 42px; padding:24px;}
     .contact {grid-template-columns: repeat(1, 1fr);}
     .contact-text h2 { font-size: 42px;}
-    .services .sub-title {font-size:42px; padding:70px 0px;}
+    .services .sub-title {font-size:42px; padding:0px;}
     .services .container {padding:90px 16px 16px 40px;}
     .main-text {padding-top:0px; margin-top: 0px;}
     .main-text h2 {font-size: 42px; margin-bottom: 24px;}
@@ -176,9 +177,13 @@ body {color: #ededed; background-color: #081b29;}
   .iconToggle.active .material-symbols-outlined.CloseIcon {display:inline-block;}
   .iconToggle.active + ul {display: block; margin-bottom:10px;}
   .navbar {display: none;}
-  .iconToggle.active + .navbar {display: block; position: fixed; top:60px; left:0px; width:100%; background:rgba(0, 0, 0, 0.8);}
+  .iconToggle.active + .navbar {display: block; position: fixed; top:60px; height: calc(100vh - 60px); left:0px; width:100%; background:rgba(0, 0, 0, 0.8);}
   .iconToggle.active + .navbar a {width: 100%; margin-left: 0px; text-align: center; padding:10px;}
   .about-text h4 {margin:0px;}
+  .portfolio {padding-top: 0px; top: 0px;}
+  .portfolio .reveal {top: 0px; padding-top:100px;}
   .portfolio-content {grid-template-columns: repeat(auto-fit, minmax(250px, auto));}
-  .header {padding: 8px 10%; position:sticky;}
+  .header {padding: 8px 10%;}
+
+.contact.reveal {margin-top:0px; padding-top: 100px;}
 }
