--- a/css/styles.css
+++ b/css/styles.css
@@ -28,7 +28,7 @@ body {color: #ededed; background-color: #081b29;}
 .services .sub-title span {color: #0ef;}
 .services .container {padding: 90px;}
 .services .services-list {display: grid; grid-template-columns: repeat(auto-fit,minmax(259px,1fr)); grid-gap: 40px; margin-top:50px;}
-.services .services-list div {background-color: #333; padding: 40px; font-size: 13px; border-right: 10px; border-radius: 20px; transition:background 0.5s; transform: 0.5s; box-shadow: 1px 1px 20px #012290f7, 1px 1px 40px #0053b8f7}
+.services .services-list div {background-color: #333; padding: 40px; font-size: 13px; border-right: 10px; border-radius: 20px; text-align: center; transform: 0.5s; box-shadow: 1px 1px 20px #012290f7, 1px 1px 40px #0053b8f7}
 .services .services-list div span {font-size: 50px; margin-bottom: 30px;}
 .services .services-list div h2 {font-size: 30px; font-weight: 500; margin-bottom: 15px;}
 .services .services-list div a {text-decoration: none; color:#000; font-size: 12px; margin-top:20px; display: inline-block;}
@@ -58,8 +58,8 @@ body {color: #ededed; background-color: #081b29;}
 .technical-bars .bar .progress-line.JavaScript span::after {content:'80%'}
 .technical-bars .bar .progress-line.JQuery span {width: 90%;}
 .technical-bars .bar .progress-line.JQuery span::after {content:'90%'}
-.technical-bars .bar .progress-line.react span {width: 50%;}
-.technical-bars .bar .progress-line.react span::after {content:'50%'}
+.technical-bars .bar .progress-line.react span {width: 60%;}
+.technical-bars .bar .progress-line.react span::after {content:'60%'}
 .technical-bars .bar .progress-line::after {position:absolute; padding: 1px 8px; background-color: #000; color: #fff; font-size: 12px; border-radius: 3px; top:-28px; right: -20px; animation:showText 0.5s 1.5s linear forwards; opacity: 0;}
 .technical-bars .bar .progress-line span::before {content: ""; position:absolute; width: 0; height: 0; border: 7px solid transparent; border-bottom-width: 0px; border-right-width: 0px; border-top-color: #000; top: -10px; right: 0; animation: shottext 0.5s 1.5s linear forwards; opacity: 0;}
 .technical-bars .bar .progress-line span::after { position:absolute; top:-26px; right: -20px; font-size: 12px; background-color: #000; border-radius: 8px; padding:4px 8px}
@@ -78,7 +78,7 @@ body {color: #ededed; background-color: #081b29;}
 .portfolio {position:relative; top:150px; padding-top:100px;}
 .main-text h2 {font-size: 60px; line-height: 1; text-align: center; margin-bottom: 32px;}
 .main-text h2 span {color: #0ef;}
-.portfolio-content {display: grid; grid-template-columns: repeat(auto-fit, minmax(359px, auto));}
+.portfolio-content {display: grid; gap: 32px; padding: 0px 32px; grid-template-columns: repeat(auto-fit, minmax(350px, auto));}
 .row {position:relative; overflow: hidden; border-radius: 8px; cursor: pointer;}
 .row img {width: 100%; border-radius: 8px; display: block; transition:transform 0.5s;}
 .layer {width: 100%; height: 0; background: linear-gradient(rgba(0,0,0,0.1),#0ef); position: absolute; border-radius: 8px; left: 0; bottom: 0; overflow: hidden; display: flex; flex-direction: column; align-items: center; padding: 0 40px; transition: height 0.5s;}
@@ -87,8 +87,8 @@ body {color: #ededed; background-color: #081b29;}
 .layer i {color: #ff004f; margin-top: 20px;  font-size: 20px; background: #fff; width: 60px; height: 60px; display: flex; align-items: center; justify-content: center; border-radius: 50%;}
 .row:hover img {transform:scale(1.1);}
 .row:hover .layer {height: 100%;}
-.contact {display: grid; grid-template-columns: repeat(2, 1fr); align-items: center; gap: 3rem; padding-left: 30px; margin-top:230px;}
-.contact-text h2 {font-size: 90px; line-height: 1; text-align: center;}
+.contact {display: grid; grid-template-columns: repeat(2, 1fr); align-items: center; gap: 3rem; padding:0px 32px; margin-top:230px;}
+.contact-text h2 {font-size:60px; line-height: 1; text-align: center; margin:0px 0px 50px 0px;}
 .contact-text h2 span {color: #0ef;}
 .contact-text h4 {margin: 15px 0; color:rgb(228,228,228); font-size: 20px; font-weight: 600;}
 .contact-text p {color: rgb(177, 177, 177); font-size: 20px; line-height: 30px; margin-bottom: 2rem;}
@@ -99,7 +99,7 @@ body {color: #ededed; background-color: #081b29;}
 .contact-icon a span {display:inline-flex; justify-content: center; align-items: center; width: 40px; height: 40px; background: transparent; border: solid 2px #0ef; border-radius: 50%; font-size: 20px; color:#0ef; text-decoration: none; margin: 30px 15px 30px 0; transition: .5s ease; opacity: 0; animation: slideLeft 1s ease forwards; animation-delay: calc(.2s * var(--i));}
 .contact-icon a span:hover {background: #0ef; color:#000; box-shadow: 0 0 20px #0ef;}
 .contact-form {position:relative;}
-.contact-form form input, form textarea {border: none; outline: none; width: 90%; padding: 18px; background: #fff; color:#000; font-size: 1rem; font-weight: 600; margin-bottom: 0.5rem; border-radius: 0.5rem;}
+.contact-form form input, form textarea {border: none; outline: none; width:100%; padding: 18px; background: #fff; color:#000; font-size: 1rem; font-weight: 600; margin-bottom: 0.5rem; border-radius: 0.5rem;}
 .contact-form textarea {resize: none; height: 220px;}
 .contact-form form .send {display: inline-block; padding: 14px 60px; background: #0ef; border-radius: 40px; font-size: 18px; color: #081b29; letter-spacing: 1px; text-decoration: none; font-weight: 600; opacity: 0; animation: slideTop 1s ease forwards; animation-delay: 2s; box-shadow: 0 0 5px #0ef, 0 0 25px #0ef}
 .contact-form form .send:hover {box-shadow: 0 0 5px cyan, 0 0 25px cyan, 0 0 50px cyan, 0 0 100px cyan, 0 0 200px cyan;}
@@ -166,7 +166,7 @@ body {color: #ededed; background-color: #081b29;}
     .contact {grid-template-columns: repeat(1, 1fr);}
     .contact-text h2 { font-size: 42px;}
     .services .sub-title {font-size:42px; padding:0px;}
-    .services .container {padding:90px 16px 16px 40px;}
+    .services .container {padding:90px 32px 16px 32px;}
     .main-text {padding-top:0px; margin-top: 0px;}
     .main-text h2 {font-size: 42px; margin-bottom: 24px;}
     .iconToggle {display:inline; float:right; color: #fff; margin-top:8px; cursor: pointer;}
@@ -177,8 +177,8 @@ body {color: #ededed; background-color: #081b29;}
   .iconToggle.active .material-symbols-outlined.CloseIcon {display:inline-block;}
   .iconToggle.active + ul {display: block; margin-bottom:10px;}
   .navbar {display: none;}
-  .iconToggle.active + .navbar {display: block; position: fixed; top:60px; height: calc(100vh - 60px); left:0px; width:100%; background:rgba(0, 0, 0, 0.8);}
-  .iconToggle.active + .navbar a {width: 100%; margin-left: 0px; text-align: center; padding:10px;}
+  .iconToggle.active + .navbar {display: block; position: fixed; top:60px; height: calc(100vh - 60px); left:0px; width:100%; background:rgba(0, 0, 0, 1);}
+  .iconToggle.active + .navbar a {width: 100%; margin-left: 0px; text-align: center; padding:16px; font-size:20px; background-color: #333; border-bottom:solid 1px #5c5c5c;}
   .about-text h4 {margin:0px;}
   .portfolio {padding-top: 0px; top: 0px;}
   .portfolio .reveal {top: 0px; padding-top:100px;}
