--- a/css/styles.css
+++ b/css/styles.css
@@ -5,7 +5,7 @@ body {color: #ededed; background-color: #081b29;}
 .logo {position: relative; font-size: 25px; color: #fff; text-decoration: none; font-weight: 600; cursor: default; opacity: 0; animation: slideRight 1s ease forwards;}
 .navbar a {display:inline-block; font-size: 25px; color: #fff; text-decoration: none; font-weight: 500; margin-left: 35px; transition: .3s; opacity: 0; animation: slideTop .5s ease forwards; animation-delay: calc(.2s * var(--i));}
 .navbar a:hover {color: #0ef;}
-.home {position: relative; width: 100%; display: flex; align-items: center; padding:0px 10% 0; justify-content: space-between; height: 100vh; background-color: #000;}
+.home {position: relative; width: 100%; display: flex; align-items: center; padding:50px 10% 0; justify-content: space-between; height: 100vh; background-color: #000;}
 .home .profile-pic img {width: 50%;}
 .home-content {max-width: 600px;}
 .home-content h3 {font-size: 32px; font-weight: 700; opacity: 0; animation: slideBottom 1s ease forwards; animation-delay: .7s;}
@@ -16,7 +16,7 @@ body {color: #ededed; background-color: #081b29;}
 .home-sci a:hover {background: #0ef; color: #081b29; box-shadow: 0 0 20px #0ef;}
 .btn-box {display: inline-block; padding: 12px 28px; background:#0ef; border-radius: 40px; font-size: 16px; color: #081b29; letter-spacing: 1px; text-decoration: none; font-weight: 600; opacity: 0; animation: slideTop 1s ease forwards; animation-delay: 2s; box-shadow: 0 0 5px #0ef, 0 0 25px #0ef}
 .btn-box:hover {box-shadow: 0 0 5px cyan, 0 0 25px cyan, 0 0 100px cyan, 0 0 200px cyan}
-.about {display: grid; grid-template-columns: repeat(2, 1fr); align-items: center; gap: 1.5rem; padding: 32px;}
+.about {display: grid; grid-template-columns: repeat(2, 1fr); align-items: center; gap: 1.5rem; padding: 32px; padding-top: 90px;}
 .about-img {display: flex; justify-content: center;}
 .about-img img {padding-bottom:10%; max-width:400px; height: auto; width: 100%; border-radius: 8px;}
 .about-text h2 {font-size: 60px;}
@@ -156,7 +156,7 @@ body {color: #ededed; background-color: #081b29;}
 }
 
 @media(max-width:780px) {
-    .home {flex-direction: column; height: auto; padding-top: 40px; padding-bottom: 40px;}
+    .home {flex-direction: column; height: auto; padding-top: 80px; padding-bottom: 40px;}
     .home .profile-pic {display:flex; justify-content:center;}
     .home .home-content {text-align: center;}
     .about {grid-template-columns: repeat(1, 1fr);}
