--- a/css/styles.css
+++ b/css/styles.css
@@ -33,7 +33,7 @@ body {color: #ededed; background-color: #081b29;}
 .services .services-list div h2 {font-size: 30px; font-weight: 500; margin-bottom: 15px;}
 .services .services-list div a {text-decoration: none; color:#000; font-size: 12px; margin-top:20px; display: inline-block;}
 .services .services-list div a {text-decoration: none; color:#000; font-size: 12px; margin-top:20px; display: inline-block;}
-.services .services-list div a.read {display: inline-block; padding: 12px; background: #0ef; border-radius: 40px; font-size: 16px; color: #081b29; letter-spacing: 1px; text-decoration: none; font-weight: 600; opacity: 0; animation: slideTop 1s ease forwards; animation-delay: 2s; box-shadow: 0 0 5px #0ef, 0 0 25px #0ef;} 
+.services .services-list div a.read {display: inline-block; padding: 12px; background: #081b29; border-radius: 40px; font-size: 16px; color: #0ef; letter-spacing: 1px; text-decoration: none; font-weight: 600; opacity: 0; animation: slideTop 1s ease forwards; animation-delay: 2s; box-shadow: 0 0 5px #0ef, 0 0 25px #0ef;} 
 .services .services-list div a.read:hover {box-shadow: 0 0 5px cyan, 0 0 25px cyan, 0 0 50px cyan, 0 0 100px cyan, 0 0  200px cyan;}
 .services .services-list div:hover {transform: translateY(-10px); animation:1s ease forwards;}
 .skill {padding:60px 0px 40px 0px;}
@@ -102,7 +102,7 @@ body {color: #ededed; background-color: #081b29;}
 .contact-form {position:relative;}
 .contact-form form input, form textarea {border: none; outline: none; width:100%; padding: 18px; background: #fff; color:#000; font-size: 1rem; font-weight: 600; margin-bottom: 0.5rem; border-radius: 0.5rem;}
 .contact-form textarea {resize: none; height: 220px;}
-.contact-form form .send {display: inline-block; padding: 14px 60px; background: #0ef; border-radius: 40px; font-size: 18px; color: #081b29; letter-spacing: 1px; text-decoration: none; font-weight: 600; opacity: 0; animation: slideTop 1s ease forwards; animation-delay: 2s; box-shadow: 0 0 5px #0ef, 0 0 25px #0ef}
+.contact-form form .send {display: inline-block; padding: 14px 60px; background: #081b29; border-radius: 40px; font-size: 18px; color: #0ef; letter-spacing: 1px; text-decoration: none; font-weight: 600; opacity: 0; animation: slideTop 1s ease forwards; animation-delay: 2s; box-shadow: 0 0 5px #0ef, 0 0 25px #0ef}
 .contact-form form .send:hover {box-shadow: 0 0 5px cyan, 0 0 25px cyan, 0 0 50px cyan, 0 0 100px cyan, 0 0 200px cyan;}
 .last-text p {width: 100%; text-align: center; padding: 25px 0px; background: rgb(7, 85, 91); font-weight: 300; margin-top: 70px;}
 .top {position: fixed; bottom: 2.1rem; right: 2.1rem;}
