--- a/css/styles.css
+++ b/css/styles.css
@@ -12,7 +12,8 @@ body#themeColorMode .header button span.dark {display: inline-block;}
 body#themeColorMode.active .header button span.light {display: inline-block;}
 body#themeColorMode.active .header button span.dark {display: none;}
 body#themeColorMode.active .header button.themeColorBtn {background-color: #fff; color: #000;}
-.home {position: relative; width: 100%; display: flex; align-items: center; padding:50px 10% 0; justify-content: space-between; height: 100vh; background-color: #000;  transition: 0.5s;}
+.home {position: relative; width: 100%; display: flex; align-items: center; padding:50px 5% 0; justify-content: space-between; height: 100vh; background-color: #000;  transition: 0.5s;}
+.home .profile-pic {display: inline-flex; justify-content: center;}
 .home .profile-pic img {width: 50%;}
 .home-content {max-width: 600px;}
 .home-content h3 {font-size: 32px; font-weight: 700; opacity: 0; animation: slideBottom 1s ease forwards; animation-delay: .7s;}
@@ -32,7 +33,7 @@ body#themeColorMode.active .btn-box:hover {box-shadow: 0 0 5px #0064ff, 0 0 25px
 .about {display: grid; grid-template-columns: repeat(2, 1fr); align-items: center; gap: 1.5rem; padding: 32px; padding-top: 90px; transition: 0.5s;}
 body#themeColorMode.active .about {background-color:#ececec;}
 .about-img {display: flex; justify-content: center;}
-.about-img img {max-width:400px; height: auto; width: 100%; background-color: #fff; border-radius:120px 20px 120px 20px;}
+.about-img img {max-width:400px; height: auto; width: 100%;}
 .about-text h2 {font-size: 60px;}
 .about-text h2 span {color:#0ef}
 body#themeColorMode.active .about-text h2 span {color:#0064ff}
@@ -136,7 +137,7 @@ body#themeColorMode.active .contact-text p {color: rgb(69 69 69);}
 .contact-form {position:relative;}
 .contact-form form input, form textarea {border: none; outline: none; width:100%; padding: 18px; background: #fff; color:#000; font-size: 1rem; font-weight: 600; margin-bottom: 0.5rem; border-radius: 0.5rem;}
 .contact-form textarea {resize: none; height: 220px;}
-.contact-form form .send {display: inline-block; padding: 14px 60px; background: #081b29; border-radius: 40px; font-size: 18px; color: #0ef; letter-spacing: 1px; text-decoration: none; font-weight: 600; opacity: 0; animation: slideTop 1s ease forwards; animation-delay: 2s; box-shadow: 0 0 5px #0ef, 0 0 25px #0ef}
+.contact-form form .send {display: inline-block; padding: 14px 60px; background: #081b29; border-radius: 40px; font-size: 18px; color: #0ef; letter-spacing: 1px; text-decoration: none; font-weight: 600; margin-top:8px; opacity: 0; animation: slideTop 1s ease forwards; animation-delay: 2s; box-shadow: 0 0 5px #0ef, 0 0 25px #0ef}
 .contact-form form .send:hover {box-shadow: 0 0 5px cyan, 0 0 25px cyan, 0 0 50px cyan, 0 0 100px cyan, 0 0 200px cyan; cursor: pointer;}
 body#themeColorMode.active .contact-form form .send {background: #fff; border-color:#0064ff; color: #0064ff; box-shadow: 0 0 5px #0064ff, 0 0 25px #0064ff}
 body#themeColorMode.active .contact-form form .send:hover {box-shadow: 0 0 5px #0064ff, 0 0 25px #0064ff, 0 0 50px #0064ff, 0 0 100px #0064ff, 0 0 200px #0064ff;}
@@ -241,11 +242,12 @@ body .blinking.active {width: 100%; height: 100vh; display: block; position: fix
   .portfolio .reveal {top: 0px; padding-top:100px;}
   .portfolio-content {grid-template-columns: repeat(auto-fit, minmax(250px, auto)); gap: 24px;}
   .portfolio-content .row {width:100%; height: 250px;}
-  .company-logo {margin-bottom: 100px;}
+  .company-logo {margin-bottom: 100px; top:130px; padding:0px 0px 30px 0px;}
   .company-logo .companies-logo {flex-direction: column;}
   .header {padding: 8px 16px;}
   .about-img img {width: 80%;}
   .contact.reveal {margin-top:0px; padding-top: 100px;}
+  .contact .contact-form form {display: flex; justify-content: center; flex-direction: column;}
   .header button.themeColorBtn {right:50px; padding: 2px 5px; font-size: 16px;}
   span.iconToggle.active + nav + button.themeColorBtn {display: none;}
 }
