--- a/css/styles.css
+++ b/css/styles.css
@@ -217,6 +217,7 @@ body .blinking.active {width: 100%; height: 100vh; display: block; position: fix
     .home {flex-direction: column; height: auto; padding-top: 80px; padding-bottom: 40px;}
     .home .profile-pic {display:flex; justify-content:center;}
     .home .home-content {text-align: center;}
+    .home-content h3 {font-size: 30px;}
     .about {grid-template-columns: repeat(1, 1fr);}
     .skill .skillContainer {flex-direction: column;}
     .skill .container {width:100%; height: auto; padding:75px 20px; margin-left:0px;}
