--- a/css/styles.css
+++ b/css/styles.css
@@ -137,7 +137,7 @@ body#themeColorMode.active .contact-text p {color: rgb(69 69 69);}
 .contact-form {position:relative;}
 .contact-form form input, form textarea {border: none; outline: none; width:100%; padding: 18px; background: #fff; color:#000; font-size: 1rem; font-weight: 600; margin-bottom: 0.5rem; border-radius: 0.5rem;}
 .contact-form textarea {resize: none; height: 220px;}
-.contact-form form .send {display: inline-block; padding: 14px 60px; background: #081b29; border-radius: 40px; font-size: 18px; color: #0ef; letter-spacing: 1px; text-decoration: none; font-weight: 600; margin-top:8px; opacity: 0; animation: slideTop 1s ease forwards; animation-delay: 2s; box-shadow: 0 0 5px #0ef, 0 0 25px #0ef}
+.contact-form form .send {display: inline-block; padding: 14px 60px; background: #081b29; border-radius: 40px; font-size: 18px; color: #0ef; letter-spacing: 1px; text-decoration: none; font-weight: 600; margin-top:8px; opacity: 0; animation: slideTop 1s ease forwards; animation-delay: 2s; box-shadow: 0 0 5px #0ef, 0 0 25px #0ef; border: none;}
 .contact-form form .send:hover {box-shadow: 0 0 5px cyan, 0 0 25px cyan, 0 0 50px cyan, 0 0 100px cyan, 0 0 200px cyan; cursor: pointer;}
 body#themeColorMode.active .contact-form form .send {background: #fff; border-color:#0064ff; color: #0064ff; box-shadow: 0 0 5px #0064ff, 0 0 25px #0064ff}
 body#themeColorMode.active .contact-form form .send:hover {box-shadow: 0 0 5px #0064ff, 0 0 25px #0064ff, 0 0 50px #0064ff, 0 0 100px #0064ff, 0 0 200px #0064ff;}
@@ -217,7 +217,7 @@ body .blinking.active {width: 100%; height: 100vh; display: block; position: fix
     .home {flex-direction: column; height: auto; padding-top: 80px; padding-bottom: 40px;}
     .home .profile-pic {display:flex; justify-content:center;}
     .home .home-content {text-align: center;}
-    .home-content h3 {font-size: 30px;}
+    .home-content h3 {font-size: 28px;}
     .about {grid-template-columns: repeat(1, 1fr);}
     .skill .skillContainer {flex-direction: column;}
     .skill .container {width:100%; height: auto; padding:75px 20px; margin-left:0px;}
@@ -236,7 +236,7 @@ body .blinking.active {width: 100%; height: 100vh; display: block; position: fix
   .iconToggle.active i.CloseIcon {display:inline-block;}
   .iconToggle.active + ul {display: block; margin-bottom:10px;}
   .navbar {display: none;}
-  .iconToggle.active + .navbar {display: block; position: fixed; top:60px; height: calc(100vh - 60px); left:0px; width:100%; background:rgba(0, 0, 0, 1);}
+  .iconToggle.active + .navbar {display: block; position: fixed; top:46px; height: calc(100vh - 60px); left:0px; width:100%; background:rgba(0, 0, 0, 1);}
   .iconToggle.active + .navbar a {width: 100%; margin-left: 0px; text-align: center; padding:16px; font-size:20px; background-color: #333; border-bottom:solid 1px #5c5c5c;}
   .about-text h4 {margin:0px;}
   .portfolio {padding-top: 0px; top: 0px;}
