--- a/css/styles.css
+++ b/css/styles.css
@@ -140,6 +140,7 @@ body#themeColorMode.active .contact-text p {color: rgb(69 69 69);}
 .contact-icon a span {display:inline-flex; justify-content: center; align-items: center; width: 40px; height: 40px; background: transparent; border: solid 2px #0ef; border-radius: 50%; font-size: 20px; color:#0ef; text-decoration: none; margin: 30px 15px 30px 0; transition: .5s ease; opacity: 0; animation: slideLeft 1s ease forwards; animation-delay: calc(.2s * var(--i));}
 .contact-icon a span:hover {background: #0ef; color:#000; box-shadow: 0 0 20px #0ef;}
 .contact-form {position:relative;}
+.contact-form iframe {width: 100%;}
 .contact-form form input, form textarea {border: none; outline: none; width:100%; padding: 18px; background: #fff; color:#000; font-size: 1rem; font-weight: 600; margin-bottom: 0.5rem; border-radius: 0.5rem;}
 .contact-form textarea {resize: none; height: 220px;}
 .contact-form form .send {display: inline-block; padding: 14px 60px; background: #081b29; border-radius: 40px; font-size: 18px; color: #0ef; letter-spacing: 1px; text-decoration: none; font-weight: 600; margin-top:8px; opacity: 0; animation: slideTop 1s ease forwards; animation-delay: 2s; box-shadow: 0 0 5px #0ef, 0 0 25px #0ef; border: none;}
