--- a/img/digitalwebsolutions/css/styles.css
+++ b/img/digitalwebsolutions/css/styles.css
@@ -90,7 +90,7 @@ section.service .container .box-container .box p{color: #4c4c4c; font-size: 14px
 section.service .container .box-container .box ul {list-style: none; color:#808080;}
 section.service .container .box-container .box ul li {padding:4px; font-size:14px;}
 section.service .container .box-container .box a {padding:8px 12px; border: solid 1px #8d8d8d; text-decoration: none;background-color: #fff; color: #8d8d8d; display:inline-block; font-size: 14px; letter-spacing: 1px; border-radius:4px; margin: 0 auto; margin-top:8px;}
-section.service .container .box-container .box a + .service-content-modal {opacity:0;  transform: scale(0); transition:0.5s; position: absolute; top:0; left: 0; background-color:#ff5e00; color:#fff; z-index:9; text-align: left; font-size: 12px; padding:12px 24px; height: 100%; box-shadow:0px 0px 10px #c8c8c8;}
+section.service .container .box-container .box a + .service-content-modal {transform: scale(0); transition:0.5s; position: absolute; top:0; left: 0; background-color:#ff5e00; color:#fff; z-index:9; text-align: left; font-size: 12px; padding:12px 24px; height: 100%; box-shadow:0px 0px 10px #c8c8c8;}
 section.service .container .box-container .box a + .service-content-modal p {color: #fff; font-size: 13px;}
 section.service .container .box-container .box.box-2 a + .service-content-modal {background-color:#0f4180;}
 section.service .container .box-container .box a + .service-content-modal .close-icon {position:absolute; right:12px; top:8px; font-size:20px; cursor:pointer;}
@@ -98,7 +98,7 @@ section.service .container .box-container .box a + .service-content-modal h2 {te
 section.service .container .box-container .box a + .service-content-modal div {margin-bottom:8px; font-size:13px; line-height: 20px;}
 section.service .container .box-container .box a + .service-content-modal ul {padding-left:22px; list-style:disc; margin:0; padding-top:0px; color: #fff; font-size: 13px;}
 section.service .container .box-container .box:has(a:focus) {z-index: 9;}
-section.service .container .box-container .box a:focus + .service-content-modal {opacity:1; transform: scale(1);}
+section.service .container .box-container .box a:focus + .service-content-modal {transform: scale(1);}
 section.service .container .box-container .box .icon-container {display: inline-block; transition: 0.5s; background-color: #eef6ff; width:90px; height:90px; position:relative; border-radius: 50%; margin-bottom:24px;}
 section.service .container .box-container .box.box-2 .icon-container {background-color: #fff;}
 section.service .container .box-container .box .icon-container i {font-size:36px; color:#8d8d8d; position:absolute; top:50%; left: 50%; transform: translate(-50%, -50%);}
@@ -229,17 +229,17 @@ input[type="datetime-local"]:hover::-webkit-calendar-picker-indicator {opacity: 
   .home-section .banner-text h2 #text {font-size:20px;}
   header nav ul li a:hover {background-color:#0f4180; color: #fff; position:relative;}
   header nav ul li:hover ul {position:relative; top: 0;}
-  .footer-sticky {position: fixed; bottom: 0px; left: 0px; background-color: #ff5e00; width: 100%; height:50px; color: #fff; z-index: 9; display: flex; justify-content: center;}
+  .footer-sticky {position: fixed; bottom: 0px; left: 0px; background-color: #ff5e00; width: 100%; height:56px; color: #fff; z-index: 9; display: flex; justify-content: center;}
   .footer-sticky .nav {width: 100%;}
   .footer-sticky .nav .m-social-contact-icon {position: absolute; width: 100%; display: flex; justify-content: center; height: 100%;}
-  .footer-sticky .nav .m-social-contact-icon a {display: inline-block; text-align: center; width: auto; text-decoration: none; font-size:14px; padding:2px 10px 0px 10px; color: #fff;}
+  .footer-sticky .nav .m-social-contact-icon a {display: inline-block; text-align: center; width: auto; text-decoration: none; font-size:14px; padding:5px 10px 0px 10px; color: #fff;}
   .footer-sticky .nav .m-social-contact-icon a i {border:solid 2px #fff; padding:6px; border-radius:50%; position:relative; top:3px;}
   .footer-sticky .nav .m-social-contact-icon a i + span{ display: block; font-size: 9px;font-weight: bold; letter-spacing: 1px; margin-top:4px;}
   .footer-sticky .nav .m-social-contact-icon:has(+ .m-navigatior.active) {display: none;}
   header nav ul li a {padding: 16px;}
   section.service .container .box-container .box a + .service-content-modal p {font-size: 11px;}
   section.testimonial .container h2 {padding: 0px 16px;}
-  section.footer {padding:16px 0px 65px 0px;}
+  section.footer {padding:16px 0px 68px 0px;}
   #ourServices {display: block;}
   .hero-section-btn {display: none;}
   .our-services-btn {display: block;}
